<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/concert_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button"
        android:fontFamily="@font/bookman_bold"
        android:paddingBottom="5dp"
        android:text="@string/remove_button"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/concert_button"
        app:layout_constraintTop_toBottomOf="@+id/concert_descr" />

    <TextView
        android:id="@+id/concert_add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/bookman_bold"
        android:text="@string/concert_inserir"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/concert_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button"
        android:fontFamily="@font/bookman_bold"
        android:paddingBottom="5dp"
        android:text="@string/add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/concert_descr" />

    <EditText
        android:id="@+id/concert_local"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/field_background"
        android:ems="10"
        android:fontFamily="@font/bookman_bold"
        android:hint="@string/local"
        android:inputType="textCapSentences"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/concert_hour"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/concert_descr"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/field_background"
        android:ems="10"
        android:fontFamily="@font/bookman_bold"
        android:hint="@string/descr"
        android:inputType="textCapSentences"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/concert_local"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/concert_date"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/field_background"
        android:ems="10"
        android:fontFamily="@font/bookman_bold"
        android:hint="@string/data"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/concert_add_title"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/concert_hour"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/field_background"
        android:ems="10"
        android:fontFamily="@font/bookman_bold"
        android:hint="@string/hour"
        android:inputType="time"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/concert_date"
        tools:ignore="Autofill" />
</androidx.constraintlayout.widget.ConstraintLayout>