<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ensaio_add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/bookman_bold"
        android:text="@string/ensaio_inserir"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ensaio_descr"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/field_background"
        android:ems="10"
        android:fontFamily="@font/bookman_bold"
        android:gravity="top|left"
        android:hint="@string/descr"
        android:inputType="textMultiLine"
        android:overScrollMode="always"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="40dp"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ensaio_hour"
        tools:ignore="Autofill,LabelFor,RtlHardcoded" />

    <EditText
        android:id="@+id/ensaio_date"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/field_background"
        android:ems="10"
        android:fontFamily="@font/bookman_bold"
        android:hint="@string/data"
        android:inputType="date"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ensaio_add_title"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/ensaio_hour"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/field_background"
        android:ems="10"
        android:fontFamily="@font/bookman_bold"
        android:hint="@string/hour"
        android:inputType="time"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ensaio_date"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/ensaio_button"
        android:layout_width="159dp"
        android:layout_height="52dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button"
        android:fontFamily="@font/bookman_bold"
        android:paddingBottom="5dp"
        android:text="@string/add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ensaio_descr" />

    <Button
        android:id="@+id/ensaio_delete"
        android:layout_width="159dp"
        android:layout_height="52dp"
        android:background="@drawable/button"
        android:fontFamily="@font/bookman_bold"
        android:paddingBottom="5dp"
        android:text="@string/remove_button"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/ensaio_button"
        app:layout_constraintTop_toBottomOf="@+id/ensaio_descr" />
</androidx.constraintlayout.widget.ConstraintLayout>