<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/music_add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/bookman_bold"
        android:text="@string/music_inserir"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/music_name"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/field_background"
        android:ems="10"
        android:fontFamily="@font/bookman_bold"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/music_add_title"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/music_artist"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/field_background"
        android:ems="10"
        android:fontFamily="@font/bookman_bold"
        android:hint="@string/artist"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/music_name"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/music_button"
        android:layout_width="159dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/login_button"
        android:fontFamily="@font/bookman_bold"
        android:paddingBottom="5dp"
        android:text="@string/add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/music_artist" />

</android.support.constraint.ConstraintLayout>