<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/contacto2_texto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:fontFamily="@font/bookman_old_style"
        android:text="@string/contacto2"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/telefone_icon"
        app:layout_constraintTop_toBottomOf="@+id/contacto1_texto" />

    <ImageView
        android:id="@+id/youtube_icon"
        android:layout_width="56dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instagram_icon"
        app:srcCompat="@drawable/youtube_icon" />

    <ImageView
        android:id="@+id/facebook_icon"
        android:layout_width="56dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contacto2_texto"
        app:srcCompat="@drawable/facebook_icon" />

    <TextView
        android:id="@+id/instagram_texto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:fontFamily="@font/bookman_old_style"
        android:text="@string/instagram"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/instagram_icon"
        app:layout_constraintTop_toBottomOf="@+id/facebook_icon" />

    <TextView
        android:id="@+id/youtube_texto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:fontFamily="@font/bookman_old_style"
        android:text="@string/youtube_account"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/youtube_icon"
        app:layout_constraintTop_toBottomOf="@+id/instagram_icon" />

    <TextView
        android:id="@+id/support_texto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:fontFamily="@font/bookman_old_style"
        android:gravity="right"
        android:text="@string/support"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/facebook_texto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:fontFamily="@font/bookman_old_style"
        android:text="@string/facebook"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/facebook_icon"
        app:layout_constraintTop_toBottomOf="@+id/contacto2_texto" />

    <TextView
        android:id="@+id/email_texto"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:fontFamily="@font/bookman_old_style"
        android:text="@string/email_coro"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/email_icon"
        app:layout_constraintTop_toBottomOf="@+id/contacts_title" />

    <TextView
        android:id="@+id/contacto1_texto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:fontFamily="@font/bookman_old_style"
        android:text="@string/contacto1"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/telefone_icon"
        app:layout_constraintTop_toBottomOf="@+id/email_icon" />

    <ImageView
        android:id="@+id/telefone_icon"
        android:layout_width="56dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_icon"
        app:srcCompat="@drawable/contacts_phone"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/instagram_icon"
        android:layout_width="56dp"
        android:layout_height="57dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook_icon"
        app:srcCompat="@drawable/instagram_icon" />

    <TextView
        android:id="@+id/contacts_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/bookman_bold"
        android:text="@string/contacts_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/email_icon"
        android:layout_width="56dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contacts_title"
        app:srcCompat="@drawable/contacts_email"
        tools:ignore="VectorDrawableCompat" />

</android.support.constraint.ConstraintLayout>