<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profile_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/bookman_bold"
        android:text="@string/post_inserir"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/post_text"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/field_background"
        android:ems="10"
        android:fontFamily="@font/bookman_bold"
        android:gravity="top|left"
        android:hint="@string/mensagem_must"
        android:inputType="textMultiLine"
        android:overScrollMode="always"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="40dp"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name2"
        tools:ignore="Autofill,LabelFor,RtlHardcoded" />

    <Button
        android:id="@+id/post_submit"
        android:layout_width="159dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/login_button"
        android:fontFamily="@font/bookman_bold"
        android:paddingBottom="5dp"
        android:text="@string/post_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_url" />

    <EditText
        android:id="@+id/post_url"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/field_background"
        android:ems="10"
        android:fontFamily="@font/bookman_bold"
        android:hint="@string/youtube"
        android:inputType="textUri"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_text"
        tools:ignore="Autofill" />
</android.support.constraint.ConstraintLayout>